# agent-drawing

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/pdf-knowledge-base/: PRD.md
.scratch/pdf-knowledge-base/issues/: 01-skeleton-config-types.md  02-pdf-parsing.md  03-summarize-categorize.md  04-structured-directory-persistence-dedup.md  05-chunk-embed-index.md  06-ingest-orchestration.md  07-retrieval-and-agent-tools.md  08-strands-ask-agent.md  09-cli-adapter.md  10-reindex-and-e2e-verify.md
docs/adr/: 0001-vector-rag-not-directory-routing.md  0002-local-embeddings.md  0003-strands-agentic-rag.md
docs/agents/: domain.md  triage-labels.md
src/docvault/: __init__.py  agent.py  anthropic_client.py  auth.py  boundaries.py  chunking.py  cli.py  config.py  corpus.py  embedding.py  enrichment.py  errors.py  index.py  ingest.py  parsing.py  reindex.py  retrieval.py  store.py  types.py
tests/: conftest.py  fakes.py  test_agent.py  test_auth.py  test_boundaries.py  test_chunking.py  test_cli.py  test_config.py  test_corpus.py  test_e2e.py  test_enrichment.py  test_index.py  test_ingest.py  test_parsing.py  test_reindex.py  test_retrieval.py  test_store.py  test_types.py
