[project]
name = "docvault"
version = "0.1.0"
description = "Local, CLI-driven PDF knowledge base with agentic RAG over Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "pyyaml>=6.0",
    "strands-agents[anthropic]>=1.45.0",
]

[project.scripts]
docvault = "docvault.cli:main"

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docvault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
